[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://src/screen/unlock_screen.gd" id="1"]
[ext_resource type="Theme" uid="uid://8v4be764xt8s" path="res://assets/base_theme.tres" id="2"]
[ext_resource type="AudioStream" uid="uid://clb13nxm4p246" path="res://assets/sfx/click.wav" id="3"]
[ext_resource type="AudioStream" uid="uid://bnob0cmrv65xr" path="res://assets/sfx/error_click.wav" id="4"]

[node name="UnlockScreen" type="ConfirmationDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -232.0
offset_bottom = -640.0
custom_minimum_size = Vector2( 540, 640 )
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
exclusive = true
window_title = "deathguy.gd"
script = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -262.0
offset_top = -312.0
offset_right = 262.0
offset_bottom = 175.0
grow_horizontal = 0
grow_vertical = 0
bbcode_enabled = true
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[node name="ErrorSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="Tween" type="Tween" parent="."]

[connection signal="confirmed" from="." to="." method="_on_UnlockScreen_confirmed"]
